modules/security_group/main.tf
// modules/security_group/main.tf

// Jenkins SG: SSH + Jenkins Web UI
resource "aws_security_group" "jenkins" {
  name        = "${var.name}-jenkins-sg"
  description = "Allow SSH and Jenkins HTTP"
  vpc_id      = var.vpc_id

  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    description      = "Jenkins UI"
    from_port        = 8080
    to_port          = 8080
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name}-jenkins-sg"
  }
}

// ECS SG: HTTP for frontend, allow backend if needed
resource "aws_security_group" "ecs" {
  name        = "${var.name}-ecs-sg"
  description = "Allow HTTP for ECS services"
  vpc_id      = var.vpc_id

  ingress {
    description      = "HTTP"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.name}-ecs-sg"
  }
}
